--- a/phoenix/web/templates/topic/index.html.eex
+++ b/phoenix/web/templates/topic/index.html.eex
@@ -4,8 +4,11 @@
 	<%= for topic <- @topics do %>
 		<li class="collection-item">
 			<%= topic.title %>
+
+			<%= if @conn.assigns.user.id == topic.user_id do %>
 			<%= link "Delete", method: :delete, class: "right", to: topic_path(@conn, :delete, topic) %>
 			<a class="right" href="/topics/<%= topic.id %>/edit">Edit</a>
+			<% end %>
 		</li>
 	<% end %>
 </ul>
